--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,13 @@
 
     <title>Talent Engines</title>
   </head>
-  <body style="background-image: url(teBanner.jpeg)">
+  <body
+    style="
+      background-image: url(lawCareerBackground.jpeg);
+      background-size: cover;
+      background-repeat: no-repeat;
+    "
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
